apps/base/dotnet-hello-world-api/dotnet-hello-world-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-hello-world-api
  labels:
    app: dotnet-hello-world-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-hello-world-api
  template:
    metadata:
      labels:
        app: dotnet-hello-world-api
    spec:
      containers:
      - name: dotnet-hello-world-api
        image: sztestacr.azurecr.io/dotnet-hello-world-api:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "60Mi"
            cpu: "50m"
          limits:
            memory: "120Mi"
            cpu: "100m"
