apps/base/dotnet-hello-world-api/dotnet-hello-world-api-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-hello-world-api-srv
  labels:
    app: dotnet-hello-world-api
spec:
  selector:
    app: dotnet-hello-world-api
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
