apps/base/dotnet-hello-world-api/dotnet-hello-world-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-hello-world-api-svc
  labels:
    app: dotnet-hello-world-api
spec:
  selector:
    app: dotnet-hello-world-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
