apps/base/dotnet-hello-world-api/dotnet-hello-world-api-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dotnet-hello-world-api-vs
  namespace: main-workloads
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-ingress
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dotnet-hello-world-api
        port:
          number: 80
